# libadapta

./: .gitignore  .gitlab-ci.yml  01_rename.py  02_replace.py  03_generate_compat_headers.py  HACKING.md  NEWS  README.md  libadapta.doap  libadapta.syms  meson.build  meson_options.txt
.gitlab-ci/: api-visibility.sh  check-abi  run-docker.sh
debian/: changelog  control  copyright  libadapta-1-0.install  libadapta-1-0.symbols  libadapta-1-dev.install  libadapta-1-examples.install  libadwaita-1-0.symbols
demo/: adap-demo-debug-info.c  adap-demo-debug-info.h  adap-demo-preferences-window.c  adap-demo-preferences-window.h  adap-demo-preferences-window.ui  adap-demo-window.c  adap-demo-window.h  adap-demo-window.ui  adapta-demo.c  adapta-demo.gresources.xml  meson.build  org.gnome.Adapta1.Demo.json
demo/data/: meson.build  org.gnome.Adapta1.Demo.desktop.in  org.gnome.Adapta1.Demo.metainfo.xml.in.in
demo/pages/about/: adap-demo-page-about.c  adap-demo-page-about.h  adap-demo-page-about.ui
demo/pages/animations/: adap-demo-page-animations.c  adap-demo-page-animations.h  adap-demo-page-animations.ui
demo/pages/avatar/: adap-demo-page-avatar.c  adap-demo-page-avatar.h  adap-demo-page-avatar.ui
demo/pages/banners/: adap-demo-page-banners.c  adap-demo-page-banners.h  adap-demo-page-banners.ui
demo/pages/buttons/: adap-demo-page-buttons.c  adap-demo-page-buttons.h  adap-demo-page-buttons.ui
demo/pages/carousel/: adap-demo-page-carousel.c  adap-demo-page-carousel.h  adap-demo-page-carousel.ui
demo/pages/clamp/: adap-demo-page-clamp.c  adap-demo-page-clamp.h  adap-demo-page-clamp.ui
demo/pages/dialogs/: adap-demo-page-dialogs.c  adap-demo-page-dialogs.h  adap-demo-page-dialogs.ui
demo/pages/lists/: adap-demo-page-lists.c  adap-demo-page-lists.h  adap-demo-page-lists.ui
demo/pages/navigation-view/: adap-demo-page-navigation-view.c  adap-demo-page-navigation-view.h  adap-demo-page-navigation-view.ui  adap-navigation-view-demo-window.c  adap-navigation-view-demo-window.h  adap-navigation-view-demo-window.ui
demo/pages/split-views/: adap-demo-page-split-views.c  adap-demo-page-split-views.h  adap-demo-page-split-views.ui  adap-navigation-split-view-demo-window.c  adap-navigation-split-view-demo-window.h  adap-navigation-split-view-demo-window.ui  adap-overlay-split-view-demo-window.c  adap-overlay-split-view-demo-window.h  adap-overlay-split-view-demo-window.ui
demo/pages/styles/: adap-demo-page-styles.c  adap-demo-page-styles.h  adap-demo-page-styles.ui  adap-style-demo-window.c  adap-style-demo-window.h  adap-style-demo-window.ui
demo/pages/tab-view/: adap-demo-page-tab-view.c  adap-demo-page-tab-view.h  adap-demo-page-tab-view.ui  adap-tab-view-demo-page.c  adap-tab-view-demo-page.h  adap-tab-view-demo-page.ui  adap-tab-view-demo-window.c  adap-tab-view-demo-window.h  adap-tab-view-demo-window.ui
demo/pages/toasts/: adap-demo-page-toasts.c  adap-demo-page-toasts.h  adap-demo-page-toasts.ui
demo/pages/view-switcher/: adap-demo-page-view-switcher.c  adap-demo-page-view-switcher.h  adap-demo-page-view-switcher.ui  adap-view-switcher-demo-window.c  adap-view-switcher-demo-window.h  adap-view-switcher-demo-window.ui
demo/pages/welcome/: adap-demo-page-welcome.c  adap-demo-page-welcome.h  adap-demo-page-welcome.ui
doc/: adaptive-layouts.md  boxed-lists.md  build-howto.md  initialization.md  libadapta.toml.in  meson.build  migrating-libhandy-1-4-to-libadapta.md  migrating-to-adaptive-dialogs.md  migrating-to-breakpoints.md  named-colors.md  style-classes.md  styles-and-appearance.md
doc/tools/: README.md  meson.build  screenshot.c  screenshot.gresources.xml
doc/tools/data/: about-dialog-credits.ui  about-dialog.ui  about-window.ui  action-row.ui  adaptive-boxed-lists-narrow.ui  adaptive-boxed-lists-wide.ui  adaptive-sidebar-narrow-1.ui  adaptive-sidebar-narrow-2.ui  adaptive-sidebar-wide.ui  adaptive-tabs-narrow-1.ui  adaptive-tabs-narrow-2.ui  adaptive-tabs-wide.ui  adaptive-triple-pane-medium.ui  adaptive-triple-pane-narrow-1.ui  adaptive-triple-pane-narrow-2.ui  adaptive-triple-pane-narrow-3.ui  adaptive-triple-pane-wide.ui  adaptive-utility-pane-narrow.ui  adaptive-utility-pane-wide.ui  adaptive-view-switcher-narrow.ui  adaptive-view-switcher-wide.ui  alert-dialog-appearance.ui  alert-dialog.ui  app-icons.ui  application-window.ui  avatar.ui  banner.ui  bin.ui  boxed-lists.ui  breakpoint-bin.ui  button-content.ui  buttons-circular.ui  buttons-destructive-action.ui  buttons-flat.ui  buttons-opaque.ui  buttons-pill.ui  buttons-raised.ui  buttons-suggested-action.ui  cards.ui  carousel-indicator-dots.ui  (+87 more)
po/: POTFILES.in  ab.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  eu.po  fa.po  fi.po  fr.po  fur.po  gl.po  he.po  hi.po  hr.po  hu.po  id.po  it.po  ja.po  ka.po  kab.po  kk.po  ko.po  lt.po  lv.po  meson.build  ml.po  nb.po  ne.po  nl.po  oc.po  pl.po  pt.po  pt_BR.po  (+12 more)
src/: adap-about-dialog.c  adap-about-dialog.h  adap-about-dialog.ui  adap-about-window.c  adap-about-window.h  adap-about-window.ui  adap-action-row-private.h  adap-action-row.c  adap-action-row.h  adap-action-row.ui  adap-alert-dialog.c  adap-alert-dialog.h  adap-alert-dialog.ui  adap-animation-private.h  adap-animation-target-private.h  adap-animation-target.c  adap-animation-target.h  adap-animation-util.c  adap-animation-util.h  adap-animation.c  adap-animation.h  adap-application-window.c  adap-application-window.h  adap-application.c  adap-application.h  adap-avatar.c  adap-avatar.h  adap-back-button-private.h  adap-back-button.c  adap-banner.c  adap-banner.h  adap-banner.ui  adap-bidi-private.h  adap-bidi.c  adap-bin.c  adap-bin.h  adap-bottom-sheet-private.h  adap-bottom-sheet.c  adap-breakpoint-bin-private.h  adap-breakpoint-bin.c  (+198 more)
src/stylesheet/: README.md  adapta-stylesheet.gresources.xml  meson.build
src/stylesheet/widgets/: _avatar.scss  _deprecated.scss  _dialogs.scss  _header-bar.scss  _lists.scss  _message-dialog.scss  _misc.scss  _toolbars.scss  _view-switcher.scss
tests/: meson.build  org.gnome.Adapta1.Test.metainfo.xml  test-avatar.c  (+52 more)
(+14 files in other folders)
